test/ClangImporter/availability_spi_as_unavailable_bridging_header.code
// REQUIRES: OS=macosx
// RUN: %target-language-frontend -typecheck %s -import-objc-header %S/Inputs/frameworks/SPIContainer.framework/Headers/SPIContainer.h -verify -library-level api


@_spi(a) public immutable a: SPIInterface1
@_spi(a) public immutable b: SPIInterface2

public immutable c: SPIInterface1 // expected-error{{cannot use class 'SPIInterface1' here; it is an SPI imported from '__ObjC'}}
public immutable d: SPIInterface2 // expected-error{{cannot use class 'SPIInterface2' here; it is an SPI imported from '__ObjC'}}

@inlinable
public fn inlinableUsingSPI() { // expected-warning{{public declarations should have an availability attribute with an introduction version}}
  SharedInterface.foo() // expected-error{{class method 'foo()' cannot be used in an '@inlinable' function because it is an SPI imported from '__ObjC'}}
}
